libs/extractor/src/snapshots/extractor__tests__dynamic_as_elements.snap
---
source: libs/extractor/src/lib.rs
expression: outputs
---
[
    (
        "<Box as={b ? 'section' : undefined} />",
        "b ? <section /> : <div />;",
    ),
    (
        "<Box as={b ? false : ''} />",
        "b ? <div /> : <div />;",
    ),
    (
        "<Box as={motion.div} p={1} />",
        "<motion.div className=\"a-a\" />;",
    ),
    (
        "<Box as={(Motion as any).Form.Field}>x</Box>",
        "<Motion.Form.Field>x</Motion.Form.Field>;",
    ),
    (
        "<Box as={_Local} />",
        "<_Local />;",
    ),
    (
        "<Box as={a ? (b ? 'h1' : Link) : null} />",
        "a ? b ? <h1 /> : <Link /> : <div />;",
    ),
    (
        "<List>{items.map((i) => <Box key={i.id} as={i.href ? 'a' : Link} p={1} />)}</List>",
        "<List>{items.map((i) => i.href ? <a key={i.id} className=\"a-a\" /> : <Link key={i.id} className=\"a-a\" />)}</List>;",
    ),
    (
        "<Box as={isLink && 'a'} />",
        "((DevupAs0) => <DevupAs0 />)(isLink && \"a\" || \"div\");",
    ),
    (
        "<Box as={props.as ?? 'div'} />",
        "((DevupAs0) => <DevupAs0 />)((props.as ?? \"div\") || \"div\");",
    ),
    (
        "<Box as={tag} />",
        "((DevupAs0) => <DevupAs0 />)(tag || \"div\");",
    ),
    (
        "<Box as={`h${level}`} />",
        "((DevupAs0) => <DevupAs0 />)(`h${level}` || \"div\");",
    ),
    (
        "<Box as={getTag()} />",
        "((DevupAs0) => <DevupAs0 />)(getTag() || \"div\");",
    ),
    (
        "<Box as={Components[key]} />",
        "((DevupAs0) => <DevupAs0 />)(Components[key] || \"div\");",
    ),
    (
        "<Box as={getThing().div} />",
        "((DevupAs0) => <DevupAs0 />)(getThing().div || \"div\");",
    ),
    (
        "<Box as={b ? tag : 'div'} />",
        "((DevupAs0) => <DevupAs0 />)((b ? tag : \"div\") || \"div\");",
    ),
    (
        "<Box as={true} />",
        "((DevupAs0) => <DevupAs0 />)(true || \"div\");",
    ),
    (
        "<Box as={{ a: 'a', b: 'button' }[kind]} onClick={track()} p={1}>{render()}</Box>",
        "((DevupAs0) => <DevupAs0 onClick={track()} className=\"a-a\">{render()}</DevupAs0>)({\n\ta: \"a\",\n\tb: \"button\"\n}[kind] || \"div\");",
    ),
    (
        "<Box as={['div', 'a'][i]} {...register('x')} p={1} />",
        "((DevupAs0, __devupSpread0) => <DevupAs0 {...__devupSpread0} className={`a-a ${__devupSpread0?.className || \"\"}`} style={__devupSpread0?.style} />)([\"div\", \"a\"][i] || \"div\", register(\"x\"));",
    ),
    (
        "<Text as={b ? 'h1' : undefined} />",
        "b ? <h1 /> : <span />;",
    ),
    (
        "<Box as={x}><Box as={y} p={1} /></Box>",
        "((DevupAs1) => <DevupAs1>{((DevupAs0) => <DevupAs0 className=\"a-a\" />)(y || \"div\")}</DevupAs1>)(x || \"div\");",
    ),
]
