libs/extractor/src/snapshots/extractor__tests__dynamic_as_where_the_element_stands.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(output)"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "margin",
                value: "4px",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "padding",
                value: "4px",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "padding",
                value: "8px",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
    },
    code: "import \"@devup-ui/react/devup-ui-0.css\";\nexport const a = (on, C, items) => <section title={((DevupAs0) => <DevupAs0 className=\"FLtest_ptsx-OLmargin-v4px\" />)(C || \"div\")}>\n    {((DevupAs1) => <DevupAs1 className=\"FLtest_ptsx-OLpadding-v4px\" />)((on ? \"a\" : \"b\") || \"div\")}\n    {items.map((item) => ((__devupSpread0, DevupAs2) => <DevupAs2 key={__devupSpread0} className=\"FLtest_ptsx-OLpadding-v8px\" />)(item, C || \"div\"))}\n    <span>{on}</span>\n  </section>;\nexport const after = 42;\n",
}
