libs/extractor/src/snapshots/extractor__tests__dynamic_value_with_important.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr#\"import {Box} from '@devup-ui/core'\nlet color = \"red\";\n<Box bg={`${color} !important`} />\n\"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: false, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Dynamic(
            ExtractDynamicStyle {
                property: "background",
                level: 0,
                identifier: "`${__devupValue0}`",
                selector: None,
                style_order: None,
                important: true,
            },
        ),
    },
    code: "import \"@devup-ui/core/devup-ui-0.css\";\nlet color = \"red\";\n((__devupValue0) => <div className=\"a-a\" style={{ \"--a\": `${__devupValue0}` }} />)(`${color}`);\n",
}
