libs/extractor/src/snapshots/extractor__tests__emotion_class_calls_follow_the_package_namespace_and_aliases.snap
---
source: libs/extractor/src/lib.rs
expression: output.code
---
"import * as compat from \"@devup-ui/react/compat\";\nexport const a = \"a b\";\nexport const b = \"c d\";\nexport const c = \"e\";\nexport const d = \"f\";\nexport const e = \"g h\";\n"
